[package]
name = "oj"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.8.0"
assert-json-diff = "2.0.2"
base64 = "0.22.1"
blake2 = "0.10.6"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
lazy_static = "1.5.0"
libc = "0.2.155"
rand = "0.8.5"
redb = "2.1.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
wait-timeout = "0.2.0"
